# soRound_os

./: .gitignore  ESP32-S3-Touch-AMOLED-1.75C-开发指南.md  README.md  design-qa.md
.claude/: launch.json
.github/workflows/: firmware.yml
GeekTool/: GeekTool.ino  README.md  app.h  app_i2c.cpp  app_sys.cpp  app_wifi.cpp  pin_config.h  ui_list.cpp  ui_list.h
GeekTool-IDF/: CMakeLists.txt  PORTING_NOTES.md  partitions.csv  sdkconfig.defaults
GeekTool-IDF/images/: README.txt
GeekTool-IDF/main/: CMakeLists.txt  app.h  app_about.c  app_audio.c  app_calendar.c  app_countdown.c  app_dice.c  app_fluid.c  app_i2c.c  app_level.c  app_maze.c  app_mouse.c  app_ota.c  app_settings.c  app_stopwatch.c  app_sys.c  app_twin.c  app_weather.c  app_wifi.c  audio_mic.c  audio_mic.h  audio_out.c  audio_out.h  ble_core.c  ble_core.h  ble_hid.c  ble_hid.h  ble_twin.c  ble_twin.h  board_config.h  bootkey.c  bootkey.h  display.c  display.h  font_cn16.c  glyph.c  glyph.h  i18n.c  i18n.h  idf_component.yml  (+20 more)
GeekTool-IDF/tools/: gen_font_cn.swift
GeekTool-IDF/web/: twin.html
WiFiList_StressTest/: README.md  WiFiList_StressTest.ino  pin_config.h
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  CubeScene.tsx  bluetooth.ts  imu.ts  styles.css
